--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=amelio-stock-ticker
 stock.service.count=10
 stock.runner.initialprice=1000
 stock.runner.sleeptime=1000
+#spring.threads.virtual.enabled=true
