Update to use coroutines (tests not updated)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=amelio-stock-ticker
-stock.service.count=10
+stock.service.count=10000
 stock.runner.initialprice=1000
 stock.runner.sleeptime=1000
-#spring.threads.virtual.enabled=true
+spring.threads.virtual.enabled=true
